[package]
name = "windows_dockbar_theme_toggler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trayicon = { version = "0.1.3", features = [] }
winapi = { version = "0.3.9", features = ["winuser", "winnt"] }
registry = { version = "1.2.3" }

[profile.release]
debug = false
strip = true
opt-level = "z"
codegen-units = 1